--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,17 +17,14 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #eaeaea;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+.creamGreen {
+  background-color: #abc6c9;
 }
